--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,168 @@
+html{
+  min-height: 100%;
+}
+
+form{
+  padding: 20px;
+  margin-top: 60px;
+}
+
+form button, form h5{
+  margin: 20px 0;
+}
+
+input[type=text]:not(.browser-default):focus:not([readonly]),
+input[type=email]:not(.browser-default):focus:not([readonly]),
+input[type=password]:not(.browser-default):focus:not([readonly]),
+textarea.materialize-textarea:focus:not([readonly]){
+  border-color: #ec407a;
+  box-shadow: none;
+}
+
+input[type=text]:not(.browser-default):focus:not([readonly]) + label,
+textarea.materialize-textarea:focus:not([readonly]) + label,
+input[type=email]:not(.browser-default):focus:not([readonly]) + label,
+input[type=password]:not(.browser-default):focus:not([readonly]) + label{
+  color: #ec407a !important;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+    font-size: 15px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-size: 100%;
+  background-position: center;
+  background-color:white;
+  background: url("image/ibomcdsBckg.png")no-repeat;
+  background-attachment: fixed;
+  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#scode {
+  background: white;
+  border: none;
+  padding-left: 15px;
+  outline: none !important;
+}
+#bcode{
+  background: white;
+  border: none;
+  padding-left: 15px;
+  outline: none !important;
+}
+#codeNumberStart {
+  background: white;
+  border: none;
+  padding-left: 15px;
+  outline: none !important;
+}
+#codeNumberEnd{
+  background: white;
+  border: none;
+  padding-left: 15px;
+  outline: none !important;
+}
+
+.first {
+  position: relative;
+}
+.first:before {
+  content: "/";
+  position: absolute;
+  left: 100%;
+  top: 0;
+  height: 100%;
+  transform: translateX(-50%);
+  font-size: 18px;
+}
+.third:before {
+  content: "-";
+  position: absolute;
+  left: 100%;
+  top: 0;
+  height: 100%;
+  transform: translateX(-50%);
+  font-size: 18px;
+}
+
+/**/
+
+.contain {
+  width: 100%;
+  max-width: 600px;
+  margin: 1px auto;
+}
+button.cds {
+  width: 100%;
+  background-color: whitesmoke;
+  border: none;
+  outline: none;
+  text-align: left;
+  padding: 15px 20px;
+  font-size: 18px;
+  color: #444;
+  cursor: pointer;
+  transition: background-color 0.2s linear;
+}
+
+button.cds:hover, button.accordion.is-open {
+  background-color: #ddd;
+}
+
+select {
+  display: block;
+}
+.formError{
+  font-size: 12;
+  color: red;
+}
+.formSuccess{
+  font-size: 12;
+  color: green;
+}
+.guild{
+  font-size: 18px;
+}
+.advertFormPreview{
+  width: 50%;
+}
+button.signout {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  text-decoration: underline;
+  display: inline;
+  margin: 0;
+  padding: 0;
+}
+
+button.signout:hover,
+button.signout:focus {
+    text-decoration: none;
+  }
+  .Accordion {
+    border: 1px solid #3d3d3d;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+td, th {
+  border-width: 1px;
+  border-style:dashed;
+  padding: 5px;
+  /*Notice the margin doesn't do anythign to our display */
+  margin: 100px;
 }
