--- a/src/index.css
+++ b/src/index.css
@@ -135,6 +135,13 @@ select {
 }
 .advertFormPreview{
   width: 50%;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 600px) {
+  .advertFormPreview {
+    width: 70%;
+  }
 }
 button.signout {
   background-color: transparent;
